# cloudcli-server-kubernetes

./: Dockerfile  README.md  USAGE.md  compose.yaml  entrypoint.sh  gunicorn_conf.py  pyproject.toml
.github/workflows/: ci.yaml
cloudcli_server_kubernetes/: api.py  celery.py  cli.py  common.py  config.py  tasks.py  web.py
cloudcli_server_kubernetes/lib/: cloudcli.py  cluster.py  cnf.py  node.py  nodepool.py  rke2.py
tests/: cluster.json  cluster_full.yaml  cluster_high_availability.yaml  get_cluster_json.py  nginx.yaml  test_cluster.py  test_cnf.py
