[tool.poetry]
name = "cloudcli-server-kubernetes"
version = "0.1.0"
description = ""
authors = ["ori <ori@uumpa.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
requests = "^2.32.3"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
ruamel-yaml = "^0.18.6"
retry = "^0.9.2"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cloudclik8s = "cloudcli_server_kubernetes.cli:main"
